--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^1.0.2",
     "next": "latest",
+    "next-sanity": "^0.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
